--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,7 @@
 # Editor configuration, see https://editorconfig.org
 root = true
 
+# Global settings for all files
 [*]
 charset = utf-8
 indent_style = space
@@ -8,10 +9,12 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+# Settings for TypeScript files
 [*.ts]
 quote_type = single
 ij_typescript_use_double_quotes = false
 
+# Settings for Markdown files
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
