--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,14 +30,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GitHub Container Registry using PAT
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-        
+          password: ${{ secrets.DOCKER_TOKEN }}  # Use the PAT stored in GitHub Secrets
 
       - name: Preprocess repository owner to lowercase
         id: preprocess
