--- a/projects/admin1/Dockerfile.admin1
+++ b/projects/admin1/Dockerfile.admin1
@@ -18,19 +18,19 @@ RUN npm install -g @angular/cli@18
 # Build the shared library first
 RUN npm run build -- --project=shared --configuration production
 
-# Build the specific microfrontend (admin)
-RUN npm run build -- --project=admin --configuration production
+# Build the specific microfrontend (admin1)
+RUN npm run build -- --project=admin1 --configuration production
 
 # Stage 2: Serve the application using Nginx
 FROM nginx:alpine AS production-stage
 
-COPY ./projects/shell/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./projects/admin1/nginx.conf /etc/nginx/conf.d/default.conf
 
 
-# Copy the built admin microfrontend to the Nginx HTML directory
-COPY --from=build-stage /app/dist/admin /usr/share/nginx/html
+# Copy the built admin1 microfrontend to the Nginx HTML directory
+COPY --from=build-stage /app/dist/admin1 /usr/share/nginx/html
 
-# Expose the port for this microfrontend (e.g., 4201 for admin)
+# Expose the port for this microfrontend (e.g., 4201 for admin1)
 EXPOSE 5500
 
 # Start Nginx
