--- a/projects/shell1/Dockerfile.shell1
+++ b/projects/shell1/Dockerfile.shell1
@@ -30,7 +30,7 @@ COPY ./projects/shell1/nginx.conf /etc/nginx/conf.d/default.conf
 # Copy the built shell1 microfrontend to the Nginx HTML directory
 COPY --from=build-stage /app/dist/shell1 /usr/share/nginx/html
 
-# Expose the port for this microfrontend (e.g., 4200 for shell)
+# Expose the port for this microfrontend (e.g., 4200 for shell1)
 EXPOSE 4200
 
 # Start Nginx
