--- a/projects/admin1/Dockerfile.admin1
+++ b/projects/admin1/Dockerfile.admin1
@@ -24,7 +24,7 @@ RUN npm run build -- --project=admin1 --configuration production
 # Stage 2: Serve the application using Nginx
 FROM nginx:alpine AS production-stage
 
-COPY ./projects/admin1/nginx.conf /etc/nginx/conf.d/default.conf
+# COPY ./projects/admin1/nginx.conf /etc/nginx/conf.d/default.conf
 
 
 # Copy the built admin1 microfrontend to the Nginx HTML directory
