--- a/projects/shell1/Dockerfile.shell1
+++ b/projects/shell1/Dockerfile.shell1
@@ -24,7 +24,7 @@ RUN npm run build -- --project=shell1 --configuration production
 # Stage 2: Serve the application using Nginx
 FROM nginx:alpine AS production-stage
 
-COPY ./projects/shell1/nginx.conf /etc/nginx/conf.d/default.conf
+# COPY ./projects/shell1/nginx.conf /etc/nginx/conf.d/default.conf
 
 
 # Copy the built shell1 microfrontend to the Nginx HTML directory
