--- a/projects/shell1/Dockerfile.shell1
+++ b/projects/shell1/Dockerfile.shell1
@@ -4,7 +4,7 @@ FROM node:18 AS build-stage
 # Set working directory to the monorepo root
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the container
+# Copy package.json and package-lock.json to the containers
 COPY package.json package-lock.json ./
 
 # Install dependencies
@@ -21,19 +21,17 @@ RUN npm run build -- --project=shared --configuration production
 # Build the specific microfrontend (shell1)
 RUN npm run build -- --project=shell1 --configuration production
 
-# Stage 2: Serve the application using a lightweight Node.js server
-FROM node:18 AS production-stage
+# Stage 2: Serve the application using Nginx
+FROM nginx:alpine AS production-stage
 
-WORKDIR /app
+COPY ./projects/shell1/nginx.conf /etc/nginx/conf.d/default.conf
 
-# Install a simple HTTP server for serving static files
-RUN npm install -g http-server
 
-# Copy built Angular app to the container
-COPY --from=build-stage /app/dist/shell1 /app/dist/shell1
+# Copy the built shell1 microfrontend to the Nginx HTML directory
+COPY --from=build-stage /app/dist/shell1 /usr/share/nginx/html
 
-# Expose the port for the application
+# Expose the port for this microfrontend (e.g., 4201 for shell1)
 EXPOSE 4200
 
-# Start the Angular application using http-server
-CMD ["http-server", "/app/dist/shell1", "-p", "4200", "-a", "0.0.0.0"]
+# Start Nginx
+CMD ["nginx", "-g", "daemon off;"]
