--- a/projects/shell1/Dockerfile.shell1
+++ b/projects/shell1/Dockerfile.shell1
@@ -27,8 +27,9 @@ FROM nginx:alpine AS production-stage
 COPY ./projects/shell1/nginx.conf /etc/nginx/conf.d/default.conf
 
 
-# Copy the built shell1 microfrontend to the Nginx HTML directory
-COPY --from=build-stage /app/dist/shell1 /usr/share/nginx/html
+# Copy the built shell1 microfrontend from the browser folder to the Nginx HTML directory
+COPY --from=build-stage /app/dist/shell1/browser/. /usr/share/nginx/html
+
 
 # Expose the port for this microfrontend (e.g., 4201 for shell1)
 EXPOSE 4200
