--- a/projects/mfe1/Dockerfile.mfe1
+++ b/projects/mfe1/Dockerfile.mfe1
@@ -24,7 +24,7 @@ RUN npm run build -- --project=mfe1 --configuration production
 # Stage 2: Serve the application using Nginx
 FROM nginx:alpine AS production-stage
 
-# COPY ./projects/mfe1/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./projects/mfe1/nginx.conf /etc/nginx/conf.d/default.conf
 
 
 # Copy the built mfe1 microfrontend from the browser folder to the Nginx HTML directory
